--- a/style.css
+++ b/style.css
@@ -89,6 +89,16 @@ p {
     border-radius: 20px !important;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 @media (min-width: 768px) {
     .w-md-25 {
         width: 25% !important;
